--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -260,3 +260,25 @@ footer {
     color:#444;
   }
 }
+
+.caixa {
+	margin-top:64px;
+	padding:32px 16px;
+	background:#eee;
+	}
+.timeline span {
+	display: inline-block;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 8px;
+	margin-right:6px;
+	}
+.timeline span:last-of-type {
+	margin-right:0;
+	}
+.nota {
+	font-size:10px;
+	text-align:center;
+	padding:0;
+	margin:0;
+	color:#444;
+	}
